client api requests implemented

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
   font-weight: 20;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  background-color: #9b9b9b;
 }
 
 code {
